force-app/main/default/objects/Case/fields/Delivery_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Tracking__c</fullName>
    <label>Delivery Tracking</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Policy</fullName>
            </value>
            <value>
                <fullName>E-Policy</fullName>
            </value>
            <value>
                <fullName>Kartu Kesehatan</fullName>
            </value>
            <value>
                <fullName>Ikhtisar Polis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>