force-app/main/default/objects/Case/fields/Demand__c.field-meta.xml
<CustomField>
    <fullName>Demand__c</fullName>
    <label>Demand</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>