force-app/main/default/objects/Case/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Unit department kerja</description>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADS</fullName>
            </value>
            <value>
                <fullName>CCC</fullName>
            </value>
            <value>
                <fullName>CLAIM</fullName>
            </value>
            <value>
                <fullName>CMU</fullName>
            </value>
            <value>
                <fullName>Collection &amp; CR</fullName>
            </value>
            <value>
                <fullName>DMU</fullName>
            </value>
            <value>
                <fullName>DPLK</fullName>
            </value>
            <value>
                <fullName>NB / UW</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>Tele Services</fullName>
            </value>
            <value>
                <fullName>Walk In/RO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>