force-app/main/default/objects/Case/fields/Department_Of_PIC__c.field-meta.xml
<CustomField>
    <fullName>Department_Of_PIC__c</fullName>
    <formula>PIC_Department_LU__r.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department Of PIC</label>
    <type>Text</type>
</CustomField>