force-app/main/default/objects/Case/fields/Department_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Department_Process_Status__c</fullName>
    <label>Department Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Processed Yet</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>