force-app/main/default/objects/Case/fields/Department_Queue__c.field-meta.xml
<CustomField>
    <fullName>Department_Queue__c</fullName>
    <label>Department Queue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Claim</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>Direct Team</fullName>
            </value>
            <value>
                <fullName>BDE</fullName>
            </value>
            <value>
                <fullName>Bancassurance</fullName>
            </value>
            <value>
                <fullName>Underwriting</fullName>
            </value>
            <value>
                <fullName>BDE Retail</fullName>
            </value>
            <value>
                <fullName>Health CR</fullName>
            </value>
            <value>
                <fullName>Product Dev &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Agent Team</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Claim Department</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Branch Tebet</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>Broker Non Health</fullName>
            </value>
            <value>
                <fullName>Underwriting Health 1</fullName>
            </value>
            <value>
                <fullName>Underwriting Health 2</fullName>
            </value>
            <value>
                <fullName>Underwriting Health 3</fullName>
            </value>
            <value>
                <fullName>Underwriting Health 4</fullName>
            </value>
            <value>
                <fullName>Health Retail</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Claim Lifestyle</fullName>
            </value>
            <value>
                <fullName>Claim MV</fullName>
            </value>
            <value>
                <fullName>Claim Marine</fullName>
            </value>
            <value>
                <fullName>Claim Property</fullName>
            </value>
            <value>
                <fullName>CMU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>