force-app/main/default/objects/Case/fields/Dept_Head__c.field-meta.xml
<CustomField>
    <fullName>Dept_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dept Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>