force-app/main/default/objects/Case/fields/Dept_PIC_MAGI__c.field-meta.xml
<CustomField>
    <fullName>Dept_PIC_MAGI__c</fullName>
    <formula>Back_Office_PIC__r.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dept PIC MAGI</label>
    <type>Text</type>
</CustomField>