force-app/main/default/objects/Case/fields/Deputy_COO__c.field-meta.xml
<CustomField>
    <fullName>Deputy_COO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deputy COO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DeputyCOO</relationshipName>
    <type>Lookup</type>
</CustomField>