force-app/main/default/objects/Case/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Complaint Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>