force-app/main/default/objects/Case/fields/Detail_of_Claim_Damage__c.field-meta.xml
<CustomField>
    <fullName>Detail_of_Claim_Damage__c</fullName>
    <inlineHelpText>Detail Kerusakan Kendaraan</inlineHelpText>
    <label>Detail of Claim Damage</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>