force-app/main/default/objects/Case/fields/Detail_of_Damage__c.field-meta.xml
<CustomField>
    <fullName>Detail_of_Damage__c</fullName>
    <formula>Contact.Detail_of_Damage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detail of Damage</label>
    <type>Text</type>
</CustomField>