force-app/main/default/objects/Case/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <defaultValue>&quot;CS&quot;</defaultValue>
    <label>Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>