force-app/main/default/objects/Case/fields/DMU_AGING_PINALTY__c.field-meta.xml
<CustomField>
    <fullName>DMU_AGING_PINALTY__c</fullName>
    <label>DMU_AGING_PINALTY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>