force-app/main/default/objects/Case/fields/DMU_DATECLOSED__c.field-meta.xml
<CustomField>
    <fullName>DMU_DATECLOSED__c</fullName>
    <label>DMU_DATECLOSED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>