force-app/main/default/objects/Case/fields/DMU_HASIL_INVESTIGASI__c.field-meta.xml
<CustomField>
    <fullName>DMU_HASIL_INVESTIGASI__c</fullName>
    <label>DMU_HASIL_INVESTIGASI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>