force-app/main/default/objects/Case/fields/DMU_HUBUNGAN__c.field-meta.xml
<CustomField>
    <fullName>DMU_HUBUNGAN__c</fullName>
    <label>DMU_HUBUNGAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>