force-app/main/default/objects/Case/fields/DMU_PENERIMA__c.field-meta.xml
<CustomField>
    <fullName>DMU_PENERIMA__c</fullName>
    <label>DMU_PENERIMA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>