force-app/main/default/objects/Case/fields/DMU_REMARK__c.field-meta.xml
<CustomField>
    <fullName>DMU_REMARK__c</fullName>
    <label>DMU_REMARK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>