force-app/main/default/objects/Case/fields/DMU_REMARK_FROM_NCS__c.field-meta.xml
<CustomField>
    <fullName>DMU_REMARK_FROM_NCS__c</fullName>
    <label>DMU_REMARK_FROM_NCS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>