force-app/main/default/objects/Case/fields/DMU_SLA_OVERDUE_OK__c.field-meta.xml
<CustomField>
    <fullName>DMU_SLA_OVERDUE_OK__c</fullName>
    <label>DMU_SLA_OVERDUE-OK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>