force-app/main/default/objects/Case/fields/DMU_STATUS__c.field-meta.xml
<CustomField>
    <fullName>DMU_STATUS__c</fullName>
    <label>DMU_STATUS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>