force-app/main/default/objects/Case/fields/DMU_STATUSCHS__c.field-meta.xml
<CustomField>
    <fullName>DMU_STATUSCHS__c</fullName>
    <label>DMU_STATUSCHS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>