force-app/main/default/objects/Case/fields/DMU_TGLHASILINVESTIGASI__c.field-meta.xml
<CustomField>
    <fullName>DMU_TGLHASILINVESTIGASI__c</fullName>
    <label>DMU_TGLHASILINVESTIGASI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>