force-app/main/default/objects/Case/fields/DMU_TGLTERIMA__c.field-meta.xml
<CustomField>
    <fullName>DMU_TGLTERIMA__c</fullName>
    <label>DMU_TGLTERIMA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>