force-app/main/default/objects/Case/fields/Document_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Document_Checklist__c</fullName>
    <label>Document Checklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>KTP</fullName>
            </value>
            <value>
                <fullName>Surat Kuasa Policy Holder</fullName>
            </value>
            <value>
                <fullName>KTP Penerima Kuasa</fullName>
            </value>
            <value>
                <fullName>Surat Kuasa</fullName>
            </value>
            <value>
                <fullName>Form Complaint</fullName>
            </value>
            <value>
                <fullName>Other1</fullName>
            </value>
            <value>
                <fullName>Other2</fullName>
            </value>
            <value>
                <fullName>Other3</fullName>
            </value>
            <value>
                <fullName>Other4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>