force-app/main/default/objects/Case/fields/Document_Request_Revise__c.field-meta.xml
<CustomField>
    <fullName>Document_Request_Revise__c</fullName>
    <label>Document Request Revise</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>CHS_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>KTP</fullName>
            </value>
            <value>
                <fullName>Surat Kuasa Policy Holder</fullName>
            </value>
            <value>
                <fullName>KTP Penerima Kuasa</fullName>
            </value>
            <value>
                <fullName>Surat Kuasa</fullName>
            </value>
            <value>
                <fullName>Form Complaint</fullName>
            </value>
            <value>
                <fullName>Other1</fullName>
            </value>
            <value>
                <fullName>Other2</fullName>
            </value>
            <value>
                <fullName>Other3</fullName>
            </value>
            <value>
                <fullName>Other4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>