force-app/main/default/objects/Case/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <formula>Contact.Driver__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver</label>
    <type>Text</type>
</CustomField>