force-app/main/default/objects/Case/fields/Driver_of_claim__c.field-meta.xml
<CustomField>
    <fullName>Driver_of_claim__c</fullName>
    <inlineHelpText>Pengemudi Kendaraan saat kejadian</inlineHelpText>
    <label>Driver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>