force-app/main/default/objects/Case/fields/Drop__c.field-meta.xml
<CustomField>
    <fullName>Drop__c</fullName>
    <label>Drop</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Complaint_Decision_AMFS__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Uncontacted Customer</fullName>
            </value>
            <value>
                <fullName>Required supporting document not submitted by customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>