force-app/main/default/objects/Case/fields/Due_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_1__c</fullName>
    <formula>Start_Date_New__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date 1</label>
    <type>Date</type>
</CustomField>