force-app/main/default/objects/Case/fields/Due_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_2__c</fullName>
    <formula>Start_Date_IncompleteInfo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date 2</label>
    <type>Date</type>
</CustomField>