force-app/main/default/objects/Case/fields/Due_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_3__c</fullName>
    <formula>Start_Date_Revised__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date 3</label>
    <type>Date</type>
</CustomField>