force-app/main/default/objects/Case/fields/Due_Date_Time_In_String__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Time_In_String__c</fullName>
    <label>Due Date Time In String</label>
    <length>100</length>
    <type>Text</type>
</CustomField>