force-app/main/default/objects/Case/fields/e2cAutoReplyType__c.field-meta.xml
<CustomField>
    <fullName>e2cAutoReplyType__c</fullName>
    <label>e2cAutoReplyType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WithoutData</fullName>
            </value>
            <value>
                <fullName>WithData</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>