force-app/main/default/objects/Case/fields/e2cContactId__c.field-meta.xml
<CustomField>
    <fullName>e2cContactId__c</fullName>
    <label>e2cContactId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>