force-app/main/default/objects/Case/fields/e2cCorporateEmailLabel__c.field-meta.xml
<CustomField>
    <fullName>e2cCorporateEmailLabel__c</fullName>
    <label>e2cCorporateEmailLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>