force-app/main/default/objects/Case/fields/e2cEmailCC__c.field-meta.xml
<CustomField>
    <fullName>e2cEmailCC__c</fullName>
    <label>e2cEmailCC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>