force-app/main/default/objects/Case/fields/e2cEmailCCAddress__c.field-meta.xml
<CustomField>
    <fullName>e2cEmailCCAddress__c</fullName>
    <label>e2cEmailCCAddress</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>