force-app/main/default/objects/Case/fields/e2cEmailFrom__c.field-meta.xml
<CustomField>
    <fullName>e2cEmailFrom__c</fullName>
    <label>e2cEmailFrom</label>
    <type>Email</type>
</CustomField>