force-app/main/default/objects/Case/fields/e2cEmailReplied__c.field-meta.xml
<CustomField>
    <fullName>e2cEmailReplied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to determine whether auto reply email is already sent or not</description>
    <label>e2cEmailReplied</label>
    <type>Checkbox</type>
</CustomField>