force-app/main/default/objects/Case/fields/e2cEmailTo__c.field-meta.xml
<CustomField>
    <fullName>e2cEmailTo__c</fullName>
    <label>e2cEmailTo</label>
    <type>Email</type>
</CustomField>