force-app/main/default/objects/Case/fields/e2cEmailTo_New__c.field-meta.xml
<CustomField>
    <fullName>e2cEmailTo_New__c</fullName>
    <label>e2cEmailTo (New)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>