force-app/main/default/objects/Case/fields/e2cEmailToAddress__c.field-meta.xml
<CustomField>
    <fullName>e2cEmailToAddress__c</fullName>
    <label>e2cEmailToAddress</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>