force-app/main/default/objects/Case/fields/e2cIsAutoReply__c.field-meta.xml
<CustomField>
    <fullName>e2cIsAutoReply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>e2cIsAutoReply</label>
    <type>Checkbox</type>
</CustomField>