force-app/main/default/objects/Case/fields/e2cIsHoliday__c.field-meta.xml
<CustomField>
    <fullName>e2cIsHoliday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>e2cIsHoliday</label>
    <type>Checkbox</type>
</CustomField>