force-app/main/default/objects/Case/fields/e2cIsProcessedByBatch__c.field-meta.xml
<CustomField>
    <fullName>e2cIsProcessedByBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>e2cIsProcessedByBatch</label>
    <type>Checkbox</type>
</CustomField>