force-app/main/default/objects/Case/fields/e2cNAV__c.field-meta.xml
<CustomField>
    <fullName>e2cNAV__c</fullName>
    <label>e2cNAV</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>