force-app/main/default/objects/Case/fields/e2cPayToDate__c.field-meta.xml
<CustomField>
    <fullName>e2cPayToDate__c</fullName>
    <label>e2cPayToDate</label>
    <length>10</length>
    <type>Text</type>
</CustomField>