force-app/main/default/objects/Case/fields/e2cPolicy_No__c.field-meta.xml
<CustomField>
    <fullName>e2cPolicy_No__c</fullName>
    <label>e2cPolicy No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>