force-app/main/default/objects/Case/fields/e2cSaldo__c.field-meta.xml
<CustomField>
    <fullName>e2cSaldo__c</fullName>
    <label>e2cSaldo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>