force-app/main/default/objects/Case/fields/e2cSubject__c.field-meta.xml
<CustomField>
    <fullName>e2cSubject__c</fullName>
    <label>e2cSubject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>