force-app/main/default/objects/Case/fields/Email_Agent__c.field-meta.xml
<CustomField>
    <fullName>Email_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases8</relationshipName>
    <type>Lookup</type>
</CustomField>