force-app/main/default/objects/Case/fields/Email_Date_Test__c.field-meta.xml
<CustomField>
    <fullName>Email_Date_Test__c</fullName>
    <label>Email Date Test</label>
    <type>DateTime</type>
</CustomField>