force-app/main/default/objects/Case/fields/Email_Due_Date_In_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Email_Due_Date_In_Datetime__c</fullName>
    <label>Email Due Date In Datetime</label>
    <type>DateTime</type>
</CustomField>