force-app/main/default/objects/Case/fields/Email_First_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_First_Response_Date__c</fullName>
    <label>Email First Response Date</label>
    <type>DateTime</type>
</CustomField>