force-app/main/default/objects/Case/fields/Email_Inbox__c.field-meta.xml
<CustomField>
    <fullName>Email_Inbox__c</fullName>
    <label>Email Inbox</label>
    <type>Email</type>
</CustomField>