force-app/main/default/objects/Case/fields/Email_Message_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Message_Date__c</fullName>
    <label>Email Message Date</label>
    <type>DateTime</type>
</CustomField>