force-app/main/default/objects/Case/fields/Email_Non_PP__c.field-meta.xml
<CustomField>
    <fullName>Email_Non_PP__c</fullName>
    <description>Sent e-receipt via email</description>
    <label>Email Non PP</label>
    <type>Email</type>
</CustomField>