force-app/main/default/objects/Case/fields/Email_Scoring_Counter__c.field-meta.xml
<CustomField>
    <fullName>Email_Scoring_Counter__c</fullName>
    <label>Email Scoring Counter</label>
    <summaryForeignKey>Email_Scoring__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>