force-app/main/default/objects/Case/fields/Email_SLA__c.field-meta.xml
<CustomField>
    <fullName>Email_SLA__c</fullName>
    <label>Email SLA</label>
    <length>20</length>
    <type>Text</type>
</CustomField>