force-app/main/default/objects/Case/fields/Email_SPV__c.field-meta.xml
<CustomField>
    <fullName>Email_SPV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email SPV</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EmailSPV</relationshipName>
    <type>Lookup</type>
</CustomField>