force-app/main/default/objects/Case/fields/Email_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Status__c</fullName>
    <label>Email Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unread</fullName>
                <default>true</default>
                <label>Unread</label>
            </value>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Replied</fullName>
            </value>
            <value>
                <fullName>Forwarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>