force-app/main/default/objects/Case/fields/Email_Status_F__c.field-meta.xml
<CustomField>
    <fullName>Email_Status_F__c</fullName>
    <formula>IF( ISPICKVAL(Email_Status__c, &apos;Unread&apos;), IMAGE(&apos;/resource/unread_email_status&apos;, &quot;unread_email_status&quot;, 15, 50), TEXT(Email_Status__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Status</label>
    <type>Text</type>
</CustomField>