force-app/main/default/objects/Case/fields/Email_Text_Holiday_Weekend__c.field-meta.xml
<CustomField>
    <fullName>Email_Text_Holiday_Weekend__c</fullName>
    <label>Email Text Holiday/Weekend</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>