force-app/main/default/objects/Case/fields/End_Date_Assigned_To_BO__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Assigned_To_BO__c</fullName>
    <label>End Date Assigned To BO</label>
    <type>Date</type>
</CustomField>