force-app/main/default/objects/Case/fields/End_Date_IncompleteInfo__c.field-meta.xml
<CustomField>
    <fullName>End_Date_IncompleteInfo__c</fullName>
    <label>End Date IncompleteInfo</label>
    <type>Date</type>
</CustomField>