force-app/main/default/objects/Case/fields/End_Date_InProgressBO__c.field-meta.xml
<CustomField>
    <fullName>End_Date_InProgressBO__c</fullName>
    <label>End Date InProgressBO</label>
    <type>Date</type>
</CustomField>