force-app/main/default/objects/Case/fields/End_Date_InProgressCMU__c.field-meta.xml
<CustomField>
    <fullName>End_Date_InProgressCMU__c</fullName>
    <label>End Date InProgressCMU</label>
    <type>Date</type>
</CustomField>