force-app/main/default/objects/Case/fields/End_Date_New__c.field-meta.xml
<CustomField>
    <fullName>End_Date_New__c</fullName>
    <label>End Date New</label>
    <type>Date</type>
</CustomField>