force-app/main/default/objects/Case/fields/End_Date_Revised__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Revised__c</fullName>
    <label>End Date Revised</label>
    <type>Date</type>
</CustomField>