force-app/main/default/objects/Case/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <formula>IF((TEXT(Origin) != &apos;Email&apos; &amp;&amp; TEXT(Type) == &apos;Inquiry&apos; ),TEXT(Owner:User.Entity__c),Text(Entity_Backup__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity</label>
    <type>Text</type>
</CustomField>