force-app/main/default/objects/Case/fields/Entity_Backup__c.field-meta.xml
<CustomField>
    <fullName>Entity_Backup__c</fullName>
    <label>Entity Backup</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AFI</fullName>
            </value>
            <value>
                <fullName>AMFS</fullName>
            </value>
            <value>
                <fullName>MAGI</fullName>
            </value>
            <value>
                <fullName>ALI</fullName>
            </value>
            <value>
                <fullName>AGI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>