force-app/main/default/objects/Case/fields/Entity_Check__c.field-meta.xml
<CustomField>
    <fullName>Entity_Check__c</fullName>
    <formula>IF ( $Profile.Name == &apos;System Administrator&apos;, TRUE, 
TEXT(Entity_Backup__c) == TEXT($User.Entity__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity Check</label>
    <type>Checkbox</type>
</CustomField>