force-app/main/default/objects/Case/fields/Escalated_Flow__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Flow__c</fullName>
    <inlineHelpText>Flow Escalation by Department</inlineHelpText>
    <label>Escalated Flow</label>
    <type>TextArea</type>
</CustomField>