force-app/main/default/objects/Case/fields/Escalated_Flow_TAT__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Flow_TAT__c</fullName>
    <label>Escalated Flow TAT</label>
    <type>TextArea</type>
</CustomField>