force-app/main/default/objects/Case/fields/Escalated_to_History__c.field-meta.xml
<CustomField>
    <fullName>Escalated_to_History__c</fullName>
    <label>Escalated to - History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>