force-app/main/default/objects/Case/fields/Event_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Event_Identifier__c</fullName>
    <label>Event Identifier</label>
    <length>200</length>
    <type>Text</type>
</CustomField>