force-app/main/default/objects/Case/fields/FA_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>FA_Branch_Code__c</fullName>
    <label>FA Branch Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>