force-app/main/default/objects/Case/fields/FA_Name__c.field-meta.xml
<CustomField>
    <fullName>FA_Name__c</fullName>
    <label>FA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>