force-app/main/default/objects/Case/fields/FCR2__c.field-meta.xml
<CustomField>
    <fullName>FCR2__c</fullName>
    <formula>IF( ISBLANK(ParentId),
IF(ISBLANK(Last_Child_Case__c), TRUE, FALSE),
IF(((Parent.CreatedDate + 30) &lt; CreatedDate), TRUE, FALSE)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FCR2</label>
    <type>Checkbox</type>
</CustomField>