force-app/main/default/objects/Case/fields/FCR__c.field-meta.xml
<CustomField>
    <fullName>FCR__c</fullName>
    <defaultValue>true</defaultValue>
    <description>By default is checked as long as the process can be done directly.
In case of any raise ticketing (request/complaint), it will be unchecked</description>
    <label>FCR</label>
    <type>Checkbox</type>
</CustomField>