force-app/main/default/objects/Case/fields/FCR_Count__c.field-meta.xml
<CustomField>
    <fullName>FCR_Count__c</fullName>
    <description>IF(FCR2__c, 1, 0)</description>
    <formula>IF( ISBLANK(ParentId),
IF(ISBLANK(Last_Child_Case__c), 1, 0),
IF(((Parent.CreatedDate + 30) &lt; CreatedDate), 1, 0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FCR Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>