force-app/main/default/objects/Case/fields/Finance_Head__c.field-meta.xml
<CustomField>
    <fullName>Finance_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FinanceHead</relationshipName>
    <type>Lookup</type>
</CustomField>