force-app/main/default/objects/Case/fields/Financial_Impact_Rp__c.field-meta.xml
<CustomField>
    <fullName>Financial_Impact_Rp__c</fullName>
    <formula>if(ISPICKVAL(Financial_Lost_Currency__c, &apos;IDR&apos;), Financial_Lost__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial Impact (Rp)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>